syntax = "proto3";

package pb;

option go_package = "./pb";

// C2 API functions
service Implant {
    rpc FetchCommand (Empty) returns (Command);
    rpc SendOutput (Command) returns (Empty);
}

// Admin API functions
service Admin {
    rpc RunCommand (Command) returns (Command);
}

message Command {
    string In = 1;
    string Out = 2;
}

// Empty message used in place of null
message Empty {}